feat(collection): refactor code to use advanced concepts